Fixed Support Centre GUI Bugs
fixed bugs where text would appear off screen or inside other objects (i.e. Images)

--- a/PCComponentSelector/app/src/main/res/layout/content_case_fan_help.xml
+++ b/PCComponentSelector/app/src/main/res/layout/content_case_fan_help.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.013"
@@ -29,7 +29,6 @@
         android:layout_height="34dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="88dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
@@ -37,21 +36,21 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="299dp"
-        android:layout_height="189dp"
+        android:layout_width="310dp"
+        android:layout_height="202dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:text="The central concept of a case fan is very simple. As the components in your computer operate, they build up heat, which can lower performance and eventually damage the hardware if it goes unchecked. The case fans on the front of your PC’s case are typically intake fans, drawing in the relatively cool air of the surrounding room to lower the temperature inside the case. Case fans on the rear and of the case are usually exhaust fans, expelling the hot air warmed up by the components back into the room."
         app:layout_constraintBottom_toTopOf="@+id/CFHelptoSCButtonLink"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -62,7 +61,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="36dp"
         android:text="Return To Support Centre"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
