--- a/PCComponentSelector/app/src/main/res/layout/content_my_build.xml
+++ b/PCComponentSelector/app/src/main/res/layout/content_my_build.xml
@@ -16,27 +16,28 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
-        android:layout_marginBottom="8dp"
         android:text="My Build"
         android:textSize="36sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="404dp"
-        android:layout_height="409dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="363dp"
+        android:layout_height="399dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:fillViewport="true"
         android:scrollbarStyle="outsideInset"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/saveButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MyBuildHeader">
+        app:layout_constraintTop_toBottomOf="@+id/MyBuildHeader"
+        app:layout_constraintVertical_bias="0.082">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -118,19 +119,6 @@
                 android:spinnerMode="dropdown" />
 
             <TextView
-                android:id="@+id/CaseHeader"
-                android:layout_width="261dp"
-                android:layout_height="wrap_content"
-                android:text="Case"
-                android:textSize="24sp" />
-
-            <Spinner
-                android:id="@+id/CaseSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:spinnerMode="dropdown" />
-
-            <TextView
                 android:id="@+id/CaseFanHeader"
                 android:layout_width="261dp"
                 android:layout_height="wrap_content"
@@ -143,6 +131,19 @@
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
 
+            <TextView
+                android:id="@+id/CaseHeader"
+                android:layout_width="261dp"
+                android:layout_height="wrap_content"
+                android:text="Case"
+                android:textSize="24sp" />
+
+            <Spinner
+                android:id="@+id/CaseSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -150,41 +151,40 @@
         android:id="@+id/LoadButton"
         android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="108dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         android:text="Load"
-        app:layout_constraintBottom_toTopOf="@+id/BuildButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saveButton" />
+        app:layout_constraintTop_toBottomOf="@+id/saveButton"
+        app:layout_constraintVertical_bias="0.166" />
 
     <Button
         android:id="@+id/saveButton"
         android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="108dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginBottom="60dp"
         android:text="Save"
-        app:layout_constraintBottom_toTopOf="@+id/BuildButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/BuildButton"
         android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="108dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="4dp"
         android:text="Build"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="0.717" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintStart_toEndOf="@+id/LoadButton" />
 
 </android.support.constraint.ConstraintLayout>
