--- a/PCComponentSelector/app/src/main/res/layout/content_main.xml
+++ b/PCComponentSelector/app/src/main/res/layout/content_main.xml
@@ -78,12 +78,12 @@
         android:layout_marginEnd="7dp"
         android:layout_marginRight="7dp"
         android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
+        app:layout_constraintEnd_toStartOf="@+id/MyPeripheralsButtonLink"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SupportCentreButtonLink" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/MyPeripheralsButtonLink"
         android:layout_width="221dp"
         android:layout_height="87dp"
         android:layout_marginStart="7dp"
@@ -91,7 +91,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="7dp"
         android:layout_marginRight="7dp"
-        android:text="Button"
+        android:text="My Peripherals"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button5"
         app:layout_constraintTop_toBottomOf="@+id/SupportCentreButtonLink" />
@@ -122,7 +122,7 @@
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/CommunityHubButtonLink"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/MyPeripheralsButtonLink" />
 
     <Button
         android:id="@+id/button9"
