--- a/PCComponentSelector/app/src/main/res/layout/content_my_build.xml
+++ b/PCComponentSelector/app/src/main/res/layout/content_my_build.xml
@@ -53,13 +53,13 @@
                 android:textSize="24sp" />
 
             <Spinner
-                android:id="@+id/CPUSpinner"
+                android:id="@+id/MouseSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
 
             <TextView
-                android:id="@+id/CPUCoolerHeader"
+                android:id="@+id/KeyboardHeader"
                 android:layout_width="254dp"
                 android:layout_height="wrap_content"
                 android:text="CPU Cooler:"
@@ -68,13 +68,13 @@
                 tools:layout_editor_absoluteY="224dp" />
 
             <Spinner
-                android:id="@+id/CPUCoolerSpinner"
+                android:id="@+id/KeyboardSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
 
             <TextView
-                android:id="@+id/GraphicsCardHeader"
+                android:id="@+id/MonitorHeader"
                 android:layout_width="256dp"
                 android:layout_height="wrap_content"
                 android:text="Graphics Card"
@@ -83,13 +83,13 @@
                 tools:layout_editor_absoluteY="224dp" />
 
             <Spinner
-                android:id="@+id/GraphicsCardSpinner"
+                android:id="@+id/MonitorSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
 
             <TextView
-                android:id="@+id/MotherboardHeader"
+                android:id="@+id/HeadphonesHeader"
                 android:layout_width="258dp"
                 android:layout_height="wrap_content"
                 android:text="Motherboard"
@@ -98,13 +98,13 @@
                 tools:layout_editor_absoluteY="224dp" />
 
             <Spinner
-                android:id="@+id/MotherboardSpinner"
+                android:id="@+id/HeadphonesSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
 
             <TextView
-                android:id="@+id/RAMHeader"
+                android:id="@+id/MicrophoneHeader"
                 android:layout_width="259dp"
                 android:layout_height="wrap_content"
                 android:text="RAM"
@@ -119,7 +119,7 @@
                 android:spinnerMode="dropdown" />
 
             <TextView
-                android:id="@+id/CaseFanHeader"
+                android:id="@+id/SpeakersHeader"
                 android:layout_width="261dp"
                 android:layout_height="wrap_content"
                 android:text="Case Fans"
