--- a/PCComponentSelector/app/src/main/res/menu/activity_communityhub_drawer.xml
+++ b/PCComponentSelector/app/src/main/res/menu/activity_communityhub_drawer.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-    <group
-        android:id="@+id/Navigation"
-        android:visible="true">
+
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/HomeNavLink"
             android:enabled="true"
@@ -37,4 +35,5 @@
             android:title="Deals"
             android:visible="true" />
     </group>
+
 </menu>
