--- a/PCComponentSelector/app/src/main/res/menu/activity_periphals_drawer.xml
+++ b/PCComponentSelector/app/src/main/res/menu/activity_periphals_drawer.xml
@@ -3,36 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/Navigation"
+        android:visible="true">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/HomeNavLink"
+            android:enabled="true"
+            android:title="Home"
+            android:visible="true" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/MyBuildNavLink"
+            android:enabled="true"
+            android:title="My Build"
+            android:visible="true" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/CommunityHubNavLink"
+            android:enabled="true"
+            android:title="Community Hub"
+            android:visible="true" />
         <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:id="@+id/PeripheralsNavLink"
+            android:enabled="true"
+            android:title="Peripherals"
+            android:visible="true" />
+        <item
+            android:id="@+id/SupportNavLink"
+            android:enabled="true"
+            android:title="Support Centre"
+            android:visible="true" />
+        <item
+            android:id="@+id/DealsNavLink"
+            android:enabled="true"
+            android:title="Deals"
+            android:visible="true" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
 
 </menu>
